tests/ui/feature-gates/feature-gate-doc_cfg.stderr
error[E0658]: `#[doc(cfg)]` is experimental
  --> $DIR/feature-gate-doc_cfg.rs:1:1
   |
LL | #[doc(cfg(unix))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #43781 <https://github.com/crablang/crablang/issues/43781> for more information
   = help: add `#![feature(doc_cfg)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
